5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1593_1801.log
== TEST (2019-03-28 10:30:32) 
-- CODE:
nome = input("Nome do objeto: ")
rep = int(input("Numero de repetições do feitiço: "))
print("nome + rep *")
-- OUTPUT:
nome + rep *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:30:57) 
-- CODE:
nome = input("Nome do objeto: ")
rep = float(input("Numero de repetições do feitiço: "))
print("nome + rep *")
-- OUTPUT:
nome + rep *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:31:32) 
-- CODE:
nome = input("Nome do objeto: ")
rep = input("Numero de repetições do feitiço: ")
print("nome + rep *")
-- OUTPUT:
nome + rep *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:03) 
-- CODE:
nome = input("Nome do objeto: ")
rep = input("Numero de repetições do feitiço: ")
print("nome + rep *")
-- OUTPUT:
nome + rep *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:38:31) 
-- CODE:
nome = float(input("Nome do objeto: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:40:11) 
-- CODE:
nome = float(input("Nome do objeto: "))
rep = float(input("Repetiçoes do feitiço: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:40:27) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repetiçoes do feitiço: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:40:41) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repetiçoes do feitiço: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:40:58) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repetiçoes do feitiço: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:41:11) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitiço: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:41:26) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input())
ValueError: could not convert string to float: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:09) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print(nome + rep*)
-- ERROR:
File "XXXX", line 3
    f = print(nome + rep*)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:21) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print("nome + rep*")
-- OUTPUT:
nome + rep*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:43:42) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print("nome + rep* Abra porta")
-- OUTPUT:
nome + rep* Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:02) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print("nome + rep 4* Abra porta")
-- OUTPUT:
nome + rep 4* Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:22) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print("nome + rep * 4 Abra porta")
-- OUTPUT:
nome + rep * 4 Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:14) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
f = print("nome+rep*4 Abra porta")
-- OUTPUT:
nome+rep*4 Abra porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:47) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
nome + rep *
-- ERROR:
File "XXXX", line 3
    nome + rep *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:47:24) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
print("Abra + nome * rep")
-- OUTPUT:
Abra + nome * rep
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:47:47) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
print("Abra + nome*rep")
-- OUTPUT:
Abra + nome*rep
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:46) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
print("Abra + nome *")
-- OUTPUT:
Abra + nome *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:49:55) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
print("Abra + nome * rep")
-- OUTPUT:
Abra + nome * rep
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:50:33) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = int(input("Repeticoes do feitico: "))
print("Abra + nome * rep ")
-- OUTPUT:
Abra + nome * rep
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:51:01) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome * rep ")
-- OUTPUT:
Abra + nome * rep
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:52:14) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome" * "rep")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Abra + nome" * "rep")
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:11) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome
-- ERROR:
File "XXXX", line 3
    print("Abra + nome
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:37) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome + Abra + nome"
-- ERROR:
File "XXXX", line 4
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:42) 
-- CODE:
nome = (input("Nome do objeto: "))
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome + Abra + nome")
-- OUTPUT:
Abra + nome + Abra + nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:54:08) 
-- CODE:
nome = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome + Abra + nome")
-- OUTPUT:
Abra + nome + Abra + nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:54:32) 
-- CODE:
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
print("Abra + nome + Abra + nome")
-- OUTPUT:
Abra + nome + Abra + nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:42) 
-- CODE:
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
f = Abra + nom * 4
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f = Abra + nom * 4
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:56:12) 
-- CODE:
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
fei = Abra + nom * rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fei = Abra + nom * rep
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:56:24) 
-- CODE:
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fei = abra + nom * rep
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:31) 
-- CODE:
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
fei = abra+nom*rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    fei = abra+nom*rep
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:48) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
abra = input("Abra: ")
fei = abra+nom*rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:20) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = float(input("Repeticoes do feitico: "))
fei = abra+nom*rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:37) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra+nom*rep
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:50) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra+nom*rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:00:04) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra+nom*rep
print(fei)
-- EXECUTION TIME:
0.159907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:13) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:39) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:53) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:07) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:01:20) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- EXECUTION TIME:
0.218001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:40) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (abra + nom) * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:01:52) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (abra + nom) * rep
print(fei)
-- EXECUTION TIME:
0.171781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:03:06) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (abra + nom) * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:23) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = " abra " + " nom " * " rep "
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:56) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = " abra + nom * rep"
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:52) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra + nom" * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:16) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra + nom " * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:56) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = abra + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:07:22) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra + nom * rep"
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:07:45) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra + nom * rep
print(fei)
-- ERROR:
File "XXXX", line 4
    fei = "abra + nom * rep
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:08:02) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra" + "nom" * "rep"
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:08:44) 
-- CODE:
abra = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "abra +  nom  * rep"
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:01) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = "a + nom * rep"
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:21) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = a + nom * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:11:49) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a + nom) * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:12:13) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a  +  nom) * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:12:48) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a"" + nom"") * rep
print(fei)
-- ERROR:
File "XXXX", line 4
    fei = (a"" + nom"") * rep
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:13:07) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a" " + nom" ") * rep
print(fei)
-- ERROR:
File "XXXX", line 4
    fei = (a" " + nom" ") * rep
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:13:47) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a + nom" ") * rep
print(fei)
-- ERROR:
File "XXXX", line 4
    fei = (a + nom" ") * rep
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:13:49) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = (a + nom" ") * rep
print(fei)
-- ERROR:
File "XXXX", line 4
    fei = (a + nom" ") * rep
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:13:58) 
-- CODE:
a = input("Abra: ")
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = ("a + nom") * rep
print(fei)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    rep = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:15:34) 
-- CODE:
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = ("Abra " + nom) * rep
print(fei)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:16:27) 
-- CODE:
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = ("Abra " + nom + " ") * rep
print(fei)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:16:36) 
-- CODE:
nom = input("Nome do objeto: ")
rep = int(input("Repeticoes do feitico: "))
fei = ("Abra " + nom + " ") * rep
print(fei)
-- EXECUTION TIME:
0.177338
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
